--- a/res/layout/fragment_mainpage.xml
+++ b/res/layout/fragment_mainpage.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/AbsoluteLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/MainPageBackgroundColor" >
@@ -9,23 +9,57 @@
         android:id="@+id/mainpage_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:background="@android:drawable/btn_default_small"
-        android:src="@drawable/mainpage_back" 
         android:contentDescription="@string/mainpage_back_contentDescription"
-        />
+        android:src="@drawable/mainpage_back" />
 
-	<ProgressBar
-	    android:id="@+id/batteryProgressBar"
-	    style="@android:style/Widget.ProgressBar.Horizontal"
-	    android:layout_width="125dp"
-	    android:layout_height="59dp"
-	    android:layout_alignRight="@+id/mainpage_back_button"
-	    android:layout_below="@+id/mainpage_back_button"
-	    android:layout_marginTop="21dp"
-	    android:max="100"
-	    android:progress="80"
-	    android:progressDrawable="@drawable/progress" />
+    <LinearLayout
+        android:layout_width="132dp"
+        android:layout_height="93dp"
+        android:layout_x="5dp"
+        android:layout_y="160dp" >
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="94dp"
+            android:src="@drawable/volume_lable" />
+
+        <ProgressBar
+            android:id="@+id/volumeProgressBar"
+            style="@android:style/Widget.ProgressBar.Horizontal"
+            android:layout_width="68dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="13dp"
+            android:max="100"
+            android:progress="20"
+            android:progressDrawable="@drawable/progressbar_volume" />
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/batteryProgressBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="125dp"
+        android:layout_height="59dp"
+        android:layout_x="11dp"
+        android:layout_y="85dp"
+        android:max="100"
+        android:progress="20"
+        android:progressDrawable="@drawable/progressbar_battery" />
+
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_x="171dp"
+        android:layout_y="158dp" >
+
+        <ImageView
+            android:id="@+id/compass_pointer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:src="@drawable/compass_pointer" />
+    </RelativeLayout>
+
+</AbsoluteLayout>
